tests/vrs/params/param_list_00_wrong_separator_expected.txt
error: expected `)`, found `;`
     --> tests/vrs/params/param_list_00_wrong_separator.vrs:1:10
      |
    1 |  (foo: bar; foo: bar)
      |           ^ help: add `)` here.
